# PhysX

./: .gitignore  PhysX.sln  README.md  RELEASE_NOTES.md  buildnativelocal.sh  paket.dependencies
.github/workflows/: publish.yml
ParticlePlaygroundVR/: App.fs  Model.fs  ParticlePlaygroundVR.fsproj  Program.fs  paket.references
src/PhysX/: PhysX.fs  PhysX.fsproj  Program.fs  paket.references
src/PhysX/Properties/: launchSettings.json
src/PhysXNative/: CMakeLists.txt  PhysXNative.cpp  PhysXNative.h
